changed dto classes to record