@@ -16,22 +16,18 @@ public class UserMapper {
     private final RoleMapper roleMapper;
 
     public UserResponseDto toDto(User user) {
-        UserResponseDto dto = new UserResponseDto();
-        dto.setId(user.getId());
-        dto.setEmail(user.getEmail());
-        dto.setUsername(user.getUsername());
-        List<RoleResponseDto> roles = user.getRole().stream()
-                .map(roleMapper::toDto)
-                .collect(Collectors.toList());
-        dto.setRoles(roles);
-        return dto;
+        return new UserResponseDto(
+                user.getId(),
+                user.getEmail(),
+                user.getUsername(),
+                user.getRole().stream().map(roleMapper::toDto).toList());
     }
 
     public User toModel(UserRegisterDto dto) {
         User user = new User();
-        user.setEmail(dto.getEmail());
-        user.setUsername(dto.getUsername());
-        user.setPassword(dto.getPassword());
+        user.setEmail(dto.email());
+        user.setUsername(dto.username());
+        user.setPassword(dto.password());
         user.setRole(new HashSet<>());
         return user;
     }
